--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,5 +12,5 @@ Test:
   before_script:
     - npm install
   script:
-    - npm run test --coverage --no-color
+    - jest --coverage --no-color
   coverage: '/^All files\s+\|\s+\d+\.*\d*\s+\|\s*(\d+\.*\d*)/'
