--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "declaration": true,
     "declarationDir": "build"
   },
-  "exclude": ["node_modules", "build", "**/mocks/*", "**/*.test.ts"]
+  "include": ["src"]
 }
