--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "run-s test clean tsc",
     "clean": "rimraf build",
     "tsc": "tsc --project tsconfig.build.json",
+    "doc": "typedoc --json docs.json --tsconfig tsconfig.build.json --mode modules --ignoreCompilerErrors",
     "test": "jest"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
+    "typedoc": "^0.14.2",
     "typescript": "^3.2.1"
   },
   "dependencies": {
