Convert to monorepo

--- a/package.json
+++ b/package.json
@@ -1,34 +1,8 @@
 {
-  "name": "@enitoni/gears",
-  "description": "A library for creating command interfaces easily",
-  "version": "2.4.2",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
-  "repository": "https://gitlab.com/enitoni/gears.git",
-  "author": "enitoni <enitoni@gmail.com>",
   "license": "MIT",
-  "files": [
-    "build/*",
-    "README.md"
-  ],
   "scripts": {
-    "build": "run-s test clean tsc",
-    "clean": "rimraf build",
-    "tsc": "tsc --project tsconfig.build.json",
-    "doc": "typedoc --json docs.json --tsconfig tsconfig.build.json --mode modules --ignoreCompilerErrors",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@types/jest": "^23.3.9",
-    "@types/node": "^10.3.2",
-    "jest": "^23.6.0",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^23.10.5",
-    "typedoc": "^0.14.2",
-    "typescript": "^3.2.1"
-  },
-  "dependencies": {
-    "decko": "^1.2.0"
+    "gears:build": "cd gears && yarn build",
+    "gears:test": "cd gears && yarn test",
+    "gears:docs": "cd gears && yarn doc"
   }
 }
