--- a/gears/package.json
+++ b/gears/package.json
@@ -15,7 +15,7 @@
     "build": "run-s test clean tsc",
     "clean": "rimraf build",
     "tsc": "tsc --project tsconfig.build.json",
-    "doc": "typedoc --options typedoc.json --tsconfig tsconfig.build.json",
+    "doc": "typedoc --options typedoc.json --tsconfig tsconfig.build.json && node ../scripts/flattenDocs ../docs/gears.json",
     "test": "jest"
   },
   "devDependencies": {
