--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack",
-    "build:server": "tsc -p tsconfig.server.json",
+    "server:build": "tsc -p tsconfig.server.json",
     "production": "node ./build/server/server.js"
   },
   "devDependencies": {
@@ -12,6 +12,7 @@
     "@types/koa-static": "^4.0.1",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
