--- a/website/package.json
+++ b/website/package.json
@@ -7,6 +7,7 @@
     "production": "node ./build/server/server.js"
   },
   "devDependencies": {
+    "@types/history": "^4.7.2",
     "@types/koa": "^2.0.49",
     "@types/koa-router": "^7.0.42",
     "@types/koa-static": "^4.0.1",
@@ -25,6 +26,7 @@
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
     "emotion-theming": "^10.0.14",
+    "history": "^4.9.0",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
