--- a/website/package.json
+++ b/website/package.json
@@ -31,8 +31,9 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mobx": "^5.13.0",
-    "mobx-react": "^6.1.1",
+    "mobx-react-lite": "^1.4.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "url-pattern": "^1.0.3"
   }
 }
