--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "es2015",
     "noImplicitAny": true,
     "preserveConstEnums": true,
+    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
