Show icons in CategoryNavigation

--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
     "koa-static": "^5.0.0",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
+    "polished": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "url-pattern": "^1.0.3"
