--- a/website/tsconfig.server.json
+++ b/website/tsconfig.server.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "outDir": "./build/server"
+    "outDir": "./build/server",
+    "sourceMap": true
   },
   "extends": "./tsconfig.json",
   "include": [],
