--- a/website/package.json
+++ b/website/package.json
@@ -8,16 +8,29 @@
     "production": "cross-env NODE_ENV=production node ./build/server/website/src/server.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/history": "^4.7.2",
     "@types/koa": "^2.0.49",
     "@types/koa-router": "^7.0.42",
     "@types/koa-static": "^4.0.1",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "babel-loader": "^8.0.6",
+    "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
+    "core-js": "^3.1.4",
     "cross-env": "^5.2.0",
+    "html-webpack-plugin": "4.0.0-beta.2",
+    "preload-webpack-plugin": "3.0.0-beta.3",
+    "regenerator-runtime": "^0.13.3",
     "rimraf": "^2.6.3",
-    "ts-loader": "^6.0.4",
+    "source-map-loader": "^0.2.4",
     "typescript": "^3.5.3",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
