--- a/website/.babelrc
+++ b/website/.babelrc
@@ -3,6 +3,14 @@
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
-    "@babel/plugin-syntax-dynamic-import"
+    "@babel/plugin-syntax-dynamic-import",
+    [
+      "babel-plugin-prismjs",
+      {
+        "languages": ["typescript"],
+        "plugins": ["line-numbers"],
+        "css": false
+      }
+    ]
   ]
 }
