--- a/website/package.json
+++ b/website/package.json
@@ -19,9 +19,11 @@
     "@types/koa": "^2.0.49",
     "@types/koa-router": "^7.0.42",
     "@types/koa-static": "^4.0.1",
+    "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "babel-loader": "^8.0.6",
+    "babel-plugin-prismjs": "^1.1.1",
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "core-js": "^3.1.4",
@@ -48,6 +50,7 @@
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "polished": "^3.4.1",
+    "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "url-pattern": "^1.0.3"
