--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,8 @@
     "client:build": "cross-env NODE_ENV=production webpack",
     "server:build": "tsc -p tsconfig.server.json",
     "build": "rimraf build && yarn client:build && yarn server:build",
-    "production": "cross-env NODE_ENV=production node ./build/server/website/src/server.js"
+    "production": "cross-env NODE_ENV=production node ./build/server/website/src/server.js",
+    "lint": "eslint --ext .ts,.tsx src/"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -22,12 +23,17 @@
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-prismjs": "^1.1.1",
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "core-js": "^3.1.4",
     "cross-env": "^5.2.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "html-webpack-plugin": "4.0.0-beta.2",
     "preload-webpack-plugin": "3.0.0-beta.3",
     "regenerator-runtime": "^0.13.3",
