--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "website:production": "cd website && yarn production"
   },
   "devDependencies": {
+    "@types/koa-conditional-get": "^2.0.0",
     "@types/node": "^12.6.8"
+  },
+  "dependencies": {
+    "koa-conditional-get": "^2.0.0"
   }
 }
