--- a/website/.babelrc
+++ b/website/.babelrc
@@ -4,13 +4,6 @@
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
     "@babel/plugin-syntax-dynamic-import",
-    [
-      "babel-plugin-prismjs",
-      {
-        "languages": ["typescript"],
-        "plugins": ["line-numbers"],
-        "css": false
-      }
-    ]
+    ["babel-plugin-prismjs", { "languages": ["typescript"], "css": false }]
   ]
 }
