--- a/website/package.json
+++ b/website/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.1.4",
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "html-webpack-plugin": "4.0.0-beta.2",
