--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/history": "^4.7.2",
     "@types/koa": "^2.0.49",
+    "@types/koa-conditional-get": "^2.0.0",
     "@types/koa-router": "^7.0.42",
     "@types/koa-static": "^4.0.1",
     "@types/prismjs": "^1.16.0",
@@ -50,6 +51,7 @@
     "emotion-theming": "^10.0.14",
     "history": "^4.9.0",
     "koa": "^2.7.0",
+    "koa-conditional-get": "^2.0.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mobx": "^5.13.0",
