--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@emotion/babel-preset-css-prop": "^10.0.14",
     "@types/history": "^4.7.2",
     "@types/koa": "^2.0.49",
     "@types/koa-conditional-get": "^2.0.0",
@@ -24,6 +25,7 @@
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/scroll-into-view": "^1.6.7",
     "babel-loader": "^8.0.6",
     "babel-plugin-prismjs": "^1.1.1",
     "compression-webpack-plugin": "^3.0.0",
@@ -60,6 +62,7 @@
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "scroll-into-view": "^1.9.7",
     "url-pattern": "^1.0.3"
   }
 }
