--- a/website/package.json
+++ b/website/package.json
@@ -52,6 +52,8 @@
     "@emotion/styled": "^10.0.14",
     "emotion-theming": "^10.0.14",
     "history": "^4.9.0",
+    "is-mobile": "^2.1.0",
+    "isbot": "^2.4.0",
     "koa": "^2.7.0",
     "koa-conditional-get": "^2.0.0",
     "koa-router": "^7.4.0",
