--- a/gears/package.json
+++ b/gears/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@enitoni/gears",
   "description": "A library for building command powered bots",
-  "version": "4.0.0",
+  "version": "4.0.2",
   "main": "./build/cjs/index.js",
   "module": "./build/esm/index.js",
   "types": "./build/index.d.ts",
@@ -10,7 +10,8 @@
   "author": "enitoni <enitoni@gmail.com>",
   "license": "MIT",
   "files": [
-    "README.md"
+    "README.md",
+    "build"
   ],
   "scripts": {
     "build": "run-s test clean compile",
