--- a/website/package.json
+++ b/website/package.json
@@ -17,7 +17,14 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@emotion/babel-preset-css-prop": "^10.0.14",
+    "@types/babel__core": "^7.1.12",
+    "@types/babel__preset-env": "^7.9.1",
+    "@types/compression-webpack-plugin": "^4.0.1",
+    "@types/copy-webpack-plugin": "^6.2.0",
+    "@types/core-js": "^2.5.4",
+    "@types/eslint": "^6.8.1",
     "@types/history": "^4.7.2",
+    "@types/html-webpack-plugin": "3.2.4",
     "@types/koa": "^2.0.49",
     "@types/koa-conditional-get": "^2.0.0",
     "@types/koa-router": "^7.0.42",
@@ -25,7 +32,12 @@
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/rimraf": "^3.0.0",
     "@types/scroll-into-view": "^1.6.7",
+    "@types/semver": "^7.3.4",
+    "@types/webpack": "^4.41.25",
+    "@types/webpack-dev-server": "^3.11.1",
+    "@types/webpack-merge": "^4.1.5",
     "babel-loader": "^8.0.6",
     "babel-plugin-prismjs": "^1.1.1",
     "compression-webpack-plugin": "^3.0.0",
@@ -65,6 +77,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "scroll-into-view": "^1.9.7",
+    "semver": "^7.3.2",
     "url-pattern": "^1.0.3"
   }
 }
