--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "website:production": "cd website && yarn production"
   },
   "devDependencies": {
+    "@types/eslint": "^6.8.1",
     "@types/node": "^12.6.8",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
